--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.3.0",
+    "moment": "^2.24.0",
     "react": "^16.8.5",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-lazy-load": "^3.0.13",
+    "react-phone-number-input": "^2.3.11",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.1.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-scrollable-feed": "^1.0.3",
+    "react-super-select": "^1.0.20",
+    "redux": "^4.0.1",
+    "redux-firestore": "^0.5.7",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
