--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.3.0",
+    "firebase-functions": "^3.0.1",
     "moment": "^2.24.0",
     "react": "^16.8.5",
     "react-datepicker": "^2.4.0",
@@ -13,7 +14,7 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.1.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.1",
     "react-scrollable-feed": "^1.0.3",
     "react-super-select": "^1.0.20",
     "redux": "^4.0.1",
