Added engines field to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0"
   },
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
