--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^5.3.0",
     "firebase-functions": "^3.0.1",
+    "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "react": "^16.8.5",
     "react-datepicker": "^2.4.0",
