--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "firebase": "^5.3.0",
     "firebase-functions": "^3.0.1",
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
-    "react": "^16.8.5",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.4.0",
-    "react-dom": "^16.8.5",
+    "react-dom": "^16.12.0",
     "react-lazy-load": "^3.0.13",
     "react-phone-number-input": "^2.3.11",
     "react-redux": "^5.1.1",
@@ -19,6 +21,7 @@
     "react-scrollable-feed": "^1.0.3",
     "react-select": "^3.0.8",
     "react-super-select": "^1.0.20",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.1",
     "redux-firestore": "^0.5.7",
     "redux-thunk": "^2.3.0"
