--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "firebase": "^5.3.0",
     "firebase-functions": "^3.0.1",
+    "google-map-react": "^1.1.5",
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
