--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "reactstrap": "^8.1.1",
     "redux": "^4.0.1",
     "redux-firestore": "^0.5.7",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
