--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "firebase": "^5.3.0",
+    "firebase": "^5.11.1",
+    "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.0.1",
     "google-map-react": "^1.1.5",
     "google-maps-react": "^2.0.2",
     "moment": "^2.24.0",
+    "npm": "^6.13.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.4.0",
@@ -18,7 +20,7 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.1.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.3.0",
     "react-scrollable-feed": "^1.0.3",
     "react-select": "^3.0.8",
     "react-super-select": "^1.0.20",
