--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-admin": "^10.0.1",
+    "firebase-functions": "^3.16.0"
   },
   "engines": {
     "node": ">=10"
