--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint src",
+    "lint:fix": "./node_modules/.bin/eslint --fix src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,5 +49,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-react": "^7.16.7",
+    "eslint": "^8.6.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.28.0"
+  }
 }
